--- a/usuario/www/index.html
+++ b/usuario/www/index.html
@@ -97,6 +97,8 @@
                         <i class="icon ion-ios-football-outline"></i>Canchas</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-torneos" data-componentid="list-item-torneos" href="#/perfil">
                         <i class="icon ion-android-contact"></i>Perfil</ion-item>
+                    <ion-item menu-close="" class="item-icon-left" id="menu-list-item-torneos" data-componentid="list-item-torneos" href="#/perfilNo">
+                        <i class="icon ion-android-contact"></i>Perfil No</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-torneos" data-componentid="list-item-torneos" href="#/torneos">
                         <i class="icon ion-trophy"></i>Torneos</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-reservas" data-componentid="list-item-reservas" href="#/misreservas" ng-click="schedulear()">
