--- a/administrador/client/index.html
+++ b/administrador/client/index.html
@@ -8,7 +8,11 @@
   <!-- styles -->
   <link href="./bower_components/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
-  <link href="./bower_components/bootstrap-fileinput/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="./bower_components/bootstrap-fileinput/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css"/>
+  <link href="./bower_components/angular-bootstrap-colorpicker/css/colorpicker.css" rel="stylesheet">
+
+
+
  <style>
     body {
       background-image: url("./img/1.jpg");
@@ -58,12 +62,16 @@
   <script src="./controllers/usuarioController.js"></script>
   <script src="./controllers/canchaController.js"></script>
   <script src="./controllers/torneoController.js"></script>
+  <script src="./controllers/schedulerController.js"></script>
   
   <link rel="stylesheet" href="./lib/styles/kendo.common.min.css"/>
   <link rel="stylesheet" href="./lib/styles/kendo.rtl.min.css"/>
   <link rel="stylesheet" href="./lib/styles/kendo.silver.min.css"/>
   <link rel="stylesheet" href="./lib/styles/kendo.mobile.all.min.css"/>
   <link rel="stylesheet" href="./lib/styles/clockpicker.css"/>
+
+  <script src="./bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
+ 
 
 
 
