--- a/usuario/www/index.html
+++ b/usuario/www/index.html
@@ -89,31 +89,28 @@
             </ion-header-bar>
             <ion-content padding="false" class="side-menu-left has-header">
                 <ion-list id="listItems" data-componentid="list2">
-                    <ion-item menu-close="" class="item-icon-left" id="menu-list-item-noticias" data-componentid="list-item-noticias" href="#/noticias">
-                        <i class="icon ion-ios-paper-outline"></i>Noticias</ion-item>
-                    <ion-item menu-close="" class="item-icon-left" id="menu-list-item-eventos" data-componentid="list-item-eventos" href="#/eventos">
-                        <i class="icon ion-android-clipboard"></i>Eventos</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-canchas" data-componentid="list-item-canchas" href="#/canchas">
                         <i class="icon ion-ios-football-outline"></i>Canchas</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-torneos" data-componentid="list-item-torneos" href="#/perfil">
                         <i class="icon ion-android-contact"></i>Perfil</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-torneos" data-componentid="list-item-torneos" href="#/perfilNo">
-                        <i class="icon ion-android-contact"></i>Perfil No</ion-item>
+                        <i class="icon ion-android-contact"></i>Perfil NO</ion-item>                        
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-torneos" data-componentid="list-item-torneos" href="#/torneos">
                         <i class="icon ion-trophy"></i>Torneos</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-reservas" data-componentid="list-item-reservas" href="#/misreservas" ng-click="schedulear()">
                         <i class="icon ion-calendar"></i>Mis reservas</ion-item>
-                    <!-- <ion-item class="item-icon-left" id="menu-list-item-grupos" data-componentid="list-item-grupos" href="#/tirolibre/misgrupos">
-                        <i class="icon ion-android-people"></i>Mis grupos</ion-item>
-                    <ion-item class="item-icon-left" id="menu-list-item-equipos" data-componentid="list-item-equipos" href="#/tirolibre/misequipos">
-                        <i class="icon ion-ios-list"></i>Mis equipos</ion-item> -->
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-contacto" data-componentid="list-item-contacto" href="#/contacto">
                         <i class="icon ion-ios-telephone"></i>Contacto</ion-item>
+                    <ion-item menu-close="" class="item-icon-left" id="menu-list-item-instorneo" data-componentid="list-item-instorneo" href="#/instorneo">
+                        <i class="icon ion-ios-telephone"></i>Inscrpcion Torneo</ion-item>
                 </ion-list>
+
             </ion-content>
         </ion-side-menu>
     </ion-side-menus>
+
   </div>
+
   </body>
     
 </html>
