--- a/usuario/www/index.html
+++ b/usuario/www/index.html
@@ -119,6 +119,8 @@ background-color: white;
                         <i class="icon ion-calendar"></i>Mis reservas</ion-item>
                     <ion-item menu-close="" class="item-icon-left" id="menu-list-item-contacto" data-componentid="list-item-contacto" href="#/contacto">
                         <i class="icon ion-ios-telephone"></i>Contacto</ion-item>
+                    <ion-item menu-close="" class="item-icon-left" id="menu-list-item-login" data-componentid="list-item-login" href="#/login">
+                        <i class="icon ion-ios-login"></i>Login</ion-item>
                 </ion-list>
 
             </ion-content>
