reseteo contraseña linkeado

--- a/usuario/www/index.html
+++ b/usuario/www/index.html
@@ -63,6 +63,7 @@ background-color: white;
     <script src="./client/controllers/perfilControllers.js"></script>
     <script src="./client/controllers/calendarioController.js"></script>
     <script src="./client/controllers/reservasController.js"></script>
+    <script src="./client/controllers/torneoController.js"></script>
     <script src="./client/controllers/pagoTarjetaController.js"></script>
     <script src="./server/routes/routes.js"></script>
     <script src="./client/directives/directives.js"></script>
