--- a/usuario/www/index.html
+++ b/usuario/www/index.html
@@ -31,7 +31,12 @@
         border-right: 0px;
       }
      .fondo{
-        background-image: url("./img/1.jpg");
+        background: url("./img/1.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        /*background-image: url("./img/1.jpg");*/
     }
         .fondoBlanco{
 background-color: white;
